media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      release: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        release: sonarr
    spec:
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: media
          persistentVolumeClaim:
            claimName: media
      containers:
        - name: sonarr
          image: sonarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr
              subPath: configs/sonarr
            - mountPath: /downloads/transmission
              name: media
              subPath: downloads/transmission
            - mountPath: /tv
              name: media
              subPath: tv
