media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app: sonarr
    release: sonarr
