media/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "sonarr.int.kyledev.co"
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
