media/sonarr/manifest.yaml
---
# Source: homelab/charts/sonarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    helm.sh/chart: sonarr-0.1.15
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
---
# Source: homelab/charts/sonarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    helm.sh/chart: sonarr-0.1.15
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels:
        helm.sh/chart: sonarr-0.1.15
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: sonarr
      securityContext:
        {}
      containers:
        - name: sonarr
          image: "linuxserver/sonarr:4.0.17"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr
              subPath: configs/sonarr
            - mountPath: /downloads/transmission
              name: media
              subPath: downloads/transmission
            - mountPath: /tv
              name: media
              subPath: tv
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media
---
# Source: homelab/charts/sonarr/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  labels:
    helm.sh/chart: sonarr-0.1.15
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "sonarr.ts.kyledev.co"
    - "sonarr.int.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: sonarr
        port: 80
