media/sonarr/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
    release: sonarr
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      release: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        release: sonarr
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          image: linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
              cpu: "0.1"
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: media-ssd
              subPath: configs/sonarr
            - mountPath: /downloads/transmission
              name: media-ssd
              subPath: downloads/transmission
            - mountPath: /tv
              name: media-ssd
              subPath: tv
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: media-ssd
          persistentVolumeClaim:
            claimName: media-ssd
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: sonarr
  name: sonarr-ingress
  namespace: media
spec:
  rules:
    - host: sonarr.int.kyledev.co
      http:
        paths:
          - backend:
              serviceName: sonarr
              servicePort: http
            path: /
  tls:
    - hosts:
        - sonarr.int.kyledev.co
      secretName: sonarr-kyle-dev-tls
